# tinybox

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: generate_cat_icon.py
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sql/migrations/: v1.sql
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: clipboard.rs  dropzone.rs  mod.rs  music.rs  window.rs
src-tauri/src/services/: audio_player.rs  clipboard_monitor.rs  mod.rs  ncm.rs
src-tauri/src/services/music_provider/: kugou.rs  mod.rs  ncm.rs  qqmusic.rs
src/lib/components/: ClipboardQuick.svelte
src/lib/components/panels/: PanelHost.svelte
src/lib/components/panels/clipboard/: ClipboardItem.svelte  ClipboardPanel.svelte
src/lib/components/panels/dropzone/: DropZonePanel.svelte  FileCard.svelte
src/lib/components/panels/music/: DiscoverView.svelte  MusicPanel.svelte  NowPlaying.svelte  PlaylistView.svelte  QrLogin.svelte  SearchView.svelte  TrackList.svelte
src/lib/components/shared/: SkeletonLine.svelte
src/lib/components/sidebar/: CatMascot.svelte  FloatingPlayer.svelte  IslandLyrics.svelte  Sidebar.svelte
src/lib/stores/: app.ts  clipboard.ts  dropzone.ts  music.ts  notes.ts  settings.ts  todo.ts
src/lib/styles/: themes.css
src/lib/types/: clipboard.ts  dropzone.ts  music.ts  note.ts  todo.ts
src/lib/utils/: db.ts  edgeSnap.ts  hotkeys.ts  pressEffect.ts  transitions.ts
(+6 files in other folders)
